--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -2,11 +2,11 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: portfolio-ing
-  annotations:
-    kubernetes.io/ingress.class: nginx
+  annotations: {}
 spec:
+  ingressClassName: nginx
   rules:
-    - host: app.local
+    - host: portfolio.local
       http:
         paths:
           - path: /_next/
